Fix the builder thread safety bug